# notes

./: .gitignore  .gitmodules  LICENSE  LICENSE.txt  README.md  environment.yml  pyproject.toml  start.sh
compilers/interpreter/lexer/: lex.go  lex_test.go
compilers/interpreter/token/: token.go
compilers/lexer/: go.mod  lex.go  lex_test.go
computation/: 01 - The Turing Machine.ipynb  adder.py  bookmarks.yaml  turing-machine.py
computation/understand-computation/: README.md  shard.yml
computation/understand-computation/src/: expr.cr  statement.cr  vm.cr
ds/challenges/groups/: LICENSE  README.md  (+1 more)
finance/: bookmarks.yaml
fun/: bookmarks.yaml
go/: bookmarks.yaml
go/lang/: reflection.go
go/workerpool/: main.go  unbuffered.go  unbuffered_test.go
groovy/: bookmarks.yaml  meta.groovy
groovy/meta/: ast_log_extended.groovy  ast_to_string.groovy  currency_cat.groovy  expando.groovy  log_extend.groovy  metaclass.groovy  use_pipeline.groovy
js/: bookmarks.yaml
linux/: bookmarks.yaml  pulseaudio.md  ssh-portforward.md
machine-learning/: bookmarks.yaml
machine-learning/math/: LinearAlgebra.ipynb
maths/: bookmarks.yaml
ml/micrograd/: intro.ipynb
ml/pandas/: getting-started.ipynb
network/: bookmarks.yaml
openshift/: bookmarks.yaml  minikube.md
openshift/kubebuilder/: install.sh
osio/: bookmarks.yaml  openshift.md
productivity/: bookmarks.yaml
random/: bookmarks.yaml
software-design/micro-services/: gokit.md
src/notes/: __about__.py  __init__.py  __main__.py
tools/: bookmarks.yaml
typescript/: package.json  rxjs.ipynb
typescript/rxjs/: package-lock.json  package.json  rxjs-fetch.ts  rxjs.ipynb  simple-observable.ts
web/: bookmarks.yaml
(+140 files in other folders)
